--- a/index.html
+++ b/index.html
@@ -1,555 +1,61 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perspectiv</title>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Fraunces:wght@500;600;700&family=Roboto:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>News Article</title>
     <style>
-                @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&family=Fraunces:ital,wght@0,500;0,600;0,700;1,600&family=Roboto:wght@700&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Raleway:wght@600&display=swap');
-
-        *,
-        *:after,
-        *:before {
-            box-sizing: border-box;
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             margin: 0;
-            padding: 0;
+            background-color: #f0f0f0;
         }
 
-        body {
-            font-family: "DM Sans", sans-serif;
-            font-size: 1rem;
-            line-height: 1.5;
-            background-color: #111827;
-            color: #FFFFFF;
-            margin: 0;
-            padding: 0 2rem;
+        #article {
+            text-align: center;
+            max-width: 600px;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
         img {
-            display: block;
-            max-width: 100%;
-        }
-
-        .header-container {
-            padding: 0 2rem;
-        }
-
-        .header {
-            padding: 1.5rem 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #111827;
-            border-bottom: 1px solid #E5E7EB;
-            color: #FFFFFF;
-        }
-
-        .header-left {
-            display: flex;
-            align-items: center;
-            flex-grow: 1;
-        }
-
-        .header-left img {
-            max-height: 40px;
-            width: auto;
-            margin-right: 20px;
-        }
-
-        .header-left .site-name {
-            font-size: 2.5rem;
-            font-weight: 700;
-            color: #FFFFFF;
-            margin-right: 20px;
-        }
-
-        .header-left .categories {
-            display: flex;
-            gap: 1rem;
-            align-items: flex-end;
-        }
-
-        .header-left .categories a {
-            color: #FFFFFF;
-            text-decoration: none;
-            font-weight: 500;
-            font-size: 1rem;
-            padding: 0.5rem;
-            border-bottom: 2px solid transparent;
-        }
-
-        .header-left .categories a:hover,
-        .header-left .categories a.active {
-            border-bottom: 2px solid #FFFFFF;
-        }
-
-        .header-right {
-            display: flex;
-            align-items: center;
-        }
-
-        .header-right a {
-            color: #FFFFFF;
-            text-decoration: none;
-            margin-left: 1rem;
-            font-weight: 500;
-            padding: 0.5rem 1rem;
-            border-radius: 4px;
-            border: 1px solid #FFFFFF;
-        }
-
-        .header-right a.header-link--button {
-            background-color: #FFFFFF;
-            color: #111827;
-            border: none;
-        }
-
-        .sub-categories-container {
-            padding: 0 2rem;
-        }
-
-        .sub-categories {
-            background-color: #111827;
-            padding: 0.75rem 0;
-            display: flex;
-            justify-content: center;
-            gap: 1rem;
-            color: #FFFFFF;
-        }
-
-        .sub-categories a {
-            padding: 0.5rem 1.5rem;
-            background-color: #1F2937;
-            color: #FFFFFF;
-            text-decoration: none;
-            border-radius: 10px;
-            font-size: 0.9rem;
-            white-space: nowrap;
-        }
-
-        .sub-categories a:hover {
-            background-color: #374151;
-        }
-
-        /* Nouvelle séparation horizontale */
-        .horizontal-separator2 {
-            width: 100%;
-            height: 1px;
-            background-color: #E5E7EB;
-            margin: 0rem 0 2rem 0;
-        }
-
-        .economie-section {
-            padding: 1.5rem;
-            background-color: #1a1a2e;
-            border-radius: 8px;
-            margin: 2rem auto;
-            max-width: 80%;
-            color: #E5E7EB;
-        }
-
-        .magazine-layout {
-            margin-top: 2.5rem;
-            display: grid;
-            grid-template-columns: 1fr auto 2fr auto 1fr;
-            grid-gap: 1.25rem;
-            max-width: 1500px;
-            margin: 0 auto;
-            transition: all 0.3s ease;
-        }
-
-        .magazine-column {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            position: relative;
-            min-height: 400px;
-        }
-
-        .magazine-column article {
-            margin-bottom: 0.5rem;
-            padding: 0.5rem;
-        }
-
-        .magazine-column article.left {
-            border: 2px solid transparent;
-            background-color: #1F2937;
-            text-align: center;
-        }
-
-        .magazine-column article.left img {
-            width: 100%;
-            height: auto;
-            margin-bottom: 0;
-        }
-
-        .magazine-column article.left .article-title {
-            padding: 0.5rem;
-            background-color: #111827;
-            margin: 0;
-        }
-
-        .vertical-separator {
-            width: 2px;
-            background-color: #E5E7EB;
-            height: 100%;
-            margin: 2rem 0;
-        }
-
-        .horizontal-separator {
-            width: 100%;
-            height: 2px;
-            background-color: #E5E7EB;
-            margin: 1.5rem 0;
-        }
-
-        .horizontal-separator1 {
-            width: 100%;
-            height: 2px;
-            background-color: #E5E7EB;
-            margin: 1.5rem 0; /* Removed negative margins */
-        }
-
-        .section-title {
-            font-size: 1.5rem;
-            font-weight: 700;
-            font-family: 'Playfair Display', serif;
-            margin-bottom: 1rem;
-        }
-
-        .article-title {
-            font-family: "Fraunces", serif;
-            font-weight: 600;
-            line-height: 1.25;
-            color: #FFFFFF;
-        }
-
-        .article-title--large {
-            font-size: 1.5rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .article-title--medium {
-            font-size: 1.1rem;
-            margin-bottom: 1rem;
-        }
-
-        .article-title--small {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        .article-excerpt,
-        .article-creditation {
-            font-size: 0.85rem;
-            line-height: 1.4;
-            color: #FFFFFF;
-        }
-
-        .article-excerpt p + p {
-            margin-top: 1.5rem;
-        }
-
-        .article-author {
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 1.5rem;
-        }
-
-        .article-author-img {
-            width: 2rem;
-            height: 2rem;
-            border-radius: 12px;
-            background-color: #323232;
-            overflow: hidden;
-            background-blend-mode: multiply;
-        }
-
-        .article-author-img + .article-author-info {
-            margin-left: 0.5rem;
-        }
-
-        .article-author-info {
-            line-height: 1.375;
-            color: #FFFFFF;
-        }
-
-        .article-author-info dl {
-            margin-top: 0.25em;
-        }
-
-        .article-author-info dt {
-            font-weight: 600;
-        }
-
-        .article-author-info dd {
-            font-size: 0.875em;
-        }
-
-        .article-category {
-            font-weight: 500;
-            margin-bottom: 1rem;
-            display: block;
-            color: #FFFFFF;
-        }
-
-        .article-category svg {
-            max-width: 1.5rem;
-            margin-right: .5rem;
-            vertical-align: middle;
-        }
-
-        .political-bar {
-            display: flex;
-            height: 15px;
-            margin-top: 0.5rem;
-        }
-
-        .political-bar .section {
-            position: relative;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-weight: bold;
-            font-size: 0.7rem;
-        }
-
-        .political-bar .section.red {
-            background-color: #9E3939;
-        }
-
-        .political-bar .section.white {
-            background-color: #e4e7ed;
-            color: #000;
-        }
-
-        .political-bar .section.blue {
-            background-color: #3C3A8E;
-        }
-
-        .political-bar .section span {
-            position: absolute;
-        }
-
-        :focus {
-            outline: 0;
-        }
-
-        .hidden {
-            display: none;
-        }
-
-        .transition {
-            transition: all 0.3s ease;
-        }
-
-        .single-article {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
-            margin-bottom: 0.5rem;
-        }
-
-        .single-article.active {
-            opacity: 1;
-            visibility: visible;
-        }
-
-        .single-article img {
             max-width: 100%;
             height: auto;
-        }
-
-        .single-article h2 {
-            margin-top: 1rem;
-            margin-bottom: 0.5rem;
-        }
-
-        .single-article .content {
-            display: flex;
-            justify-content: space-between;
-        }
-
-        .single-article .content .text {
-            flex: 1;
-            margin-right: 1rem;
-        }
-
-        .small-article {
-            width: 100%;
-            background-color: #111827;
-            padding: 1rem;
-            border-radius: 8px;
-            margin-bottom: 1rem;
-            position: relative;
-        }
-
-        .small-article.left {
-            border: 2px solid transparent;
-            background: #1F2937;
-        }
-
-        .small-article img {
-            width: 100%;
-            height: auto;
-            margin-bottom: 0;
-        }
-
-        .small-article .article-title {
-            font-size: 1.3rem;
-            margin-top: 0.5rem;
-            color: #FFFFFF;
-        }
-
-        .section-title--blindspot {
-            font-family: 'Playfair Display', serif;
-        }
-
-        .section-title--france {
-            font-family: 'Playfair Display', serif;
-        }
-
-        .article-container {
-            position: relative;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .small-articles-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 1rem;
-        }
-
-        .footer {
-            text-align: center;
-            position: relative;
-            bottom: 0;
-            width: 100%;
-            padding: 1rem 0;
-            background-color: #111827;
-            color: #FFFFFF;
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <!-- Header Section -->
-    <div class="header-container">
-        <header class="header">
-            <div class="header-left">
-                <img src="https://i.imgur.com/JDZe0Ml.png" alt="Logo de Perspectiv">
-                <span class="site-name">Perspectiv</span>
-                <div class="categories">
-                    <a href="economie.html" class="active">Économie</a>
-                    <a href="politique.html">Politique</a>
-                    <a href="profil.html">Profil</a>
-                    <a href="geopolitique.html">Géo-politique</a>
-                </div>
-            </div>
-            <div class="header-right">
-                <a href="newsletter.html" class="header-link header-link--button">Newsletters</a>
-                <a href="signup.html" class="header-link">Login</a>
-            </div>
-        </header>
+    <div id="article">
+        <h1 id="title">Loading...</h1>
+        <img id="image" src="" alt="Article Image">
     </div>
-
-    <!-- Sub Categories -->
-    <div class="sub-categories-container">
-        <div class="sub-categories">
-            <a href="#">Tendance Actuelle 1</a>
-            <a href="#">Tendance Actuelle 2</a>
-            <a href="#">Tendance Actuelle 3</a>
-            <a href="#">Tendance Actuelle 4</a>
-        </div>
-    </div>
-
-    <!-- Ajout de la séparation horizontale juste en dessous des sous-catégories -->
-    <div class="horizontal-separator2"></div>
-
-    <!-- Main Content -->
-    <main class="responsive-wrapper">
-        <div id="actu-du-jour" class="magazine-layout">
-            <div class="magazine-column" id="blindspot-column">
-                <h2 class="section-title section-title--blindspot">•BlindSpot•</h2>
-                <article class="small-article left" id="article1">
-                    <figure>
-                        <img id="article1-img" src="https://placehold.co/300x200" alt="Image de l'article 1" />
-                    </figure>
-                    <h3 class="article-title article-title--small">
-                        <a id="article1-title" href="#" class="article-link">Small Article Title 1</a>
-                    </h3>
-                    <div class="political-bar mb-8" id="article1-bar">
-                        <!-- Barres de pourcentage ici -->
-                    </div>
-                </article>
-                <!-- Ajout de plus d'articles ici si nécessaire -->
-            </div>
-            <!-- Autres colonnes -->
-        </div>
-    </main>
-
-    <!-- Footer Section -->
-    <footer class="footer">
-        &copy; 2024 Perspectiv. All rights reserved.
-    </footer>
 
     <script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const apiKey = '0dd205a802df427cb42c317f6931c67d';
-            const url = `https://newsapi.org/v2/top-headlines?country=us&category=business&apiKey=0dd205a802df427cb42c317f6931c67d`;
+        document.addEventListener("DOMContentLoaded", function() {
+            const url = "https://newsapi.org/v2/top-headlines?country=us&category=business&apiKey=0dd205a802df427cb42c317f6931c67d";
 
             fetch(url)
-                .then(response => {
-                    if (!response.ok) {
-                        throw new Error('Network response was not ok');
-                    }
-                    return response.json();
-                })
+                .then(response => response.json())
                 .then(data => {
-                    const articles = data.articles;
-                    if (articles && articles.length > 0) {
-                        // Remplir le premier article avec les données de NewsAPI
-                        const article1 = articles[0];
-                        const imgElement = document.getElementById('article1-img');
-                        const titleElement = document.getElementById('article1-title');
-
-                        imgElement.src = article1.urlToImage || 'https://placehold.co/300x200';
-                        titleElement.innerText = article1.title || 'Titre non disponible';
-                        titleElement.href = article1.url || '#';
+                    if (data.status === "ok" && data.articles.length > 0) {
+                        const article = data.articles[0];
+                        document.getElementById("title").textContent = article.title;
+                        document.getElementById("image").src = article.urlToImage;
+                    } else {
+                        document.getElementById("title").textContent = "No articles found.";
                     }
                 })
                 .catch(error => {
-                    console.error('Erreur:', error);
+                    document.getElementById("title").textContent = "An error occurred.";
+                    console.error("Error fetching the news:", error);
                 });
-
-            // Vérifiez si des articles existent avant de tenter de les faire tourner
-            var articles = document.querySelectorAll('.single-article');
-            if (articles.length > 0) {
-                var currentArticle = 0;
-                var totalArticles = articles.length;
-
-                function showNextArticle() {
-                    articles[currentArticle].classList.remove('active');
-                    currentArticle = (currentArticle + 1) % totalArticles;
-                    articles[currentArticle].classList.add('active');
-                }
-
-                setInterval(showNextArticle, 10000); // Change article every 10 seconds
-            } else {
-                console.warn('Aucun article trouvé pour la rotation.');
-            }
         });
     </script>
 </body>
