--- a/index.html
+++ b/index.html
@@ -79,12 +79,23 @@
 
             // On récupère le premier article
             const article = data.results[0];
-            document.getElementById('article-title').textContent = article.title;
-            document.getElementById('article-description').textContent = article.description;
-            document.getElementById('article-image').src = article.image_url;
 
-            // Envoyer la source de l'article à l'API MBFC pour analyser l'orientation
-            analyzeSource(article.source_id);
+            // Vérification que l'article contient une source
+            if (article) {
+                document.getElementById('article-title').textContent = article.title || "Titre non disponible";
+                document.getElementById('article-description').textContent = article.description || "Description non disponible";
+                document.getElementById('article-image').src = article.image_url || "https://via.placeholder.com/800x400?text=Image+non+disponible";
+
+                // Si la source est présente, on analyse la source
+                if (article.source_id) {
+                    analyzeSource(article.source_id);
+                } else {
+                    document.getElementById('bias-bar').innerHTML = '<div class="unknown">Source non disponible</div>';
+                }
+            } else {
+                throw new Error("Aucun article trouvé");
+            }
+
         } catch (error) {
             console.error("Erreur lors de la récupération de l'article : ", error);
             document.getElementById('article-title').textContent = "Erreur lors du chargement de l'article.";
@@ -101,23 +112,28 @@
             });
             const data = await response.json();
 
-            // On vérifie si la source est dans les résultats MBFC
-            const source = data.find(s => s.source_name.toLowerCase() === sourceId.toLowerCase());
-            const biasBar = document.getElementById('bias-bar');
+            // Vérification que le résultat est valide
+            if (Array.isArray(data) && data.length > 0) {
+                const source = data.find(s => s.source_name && s.source_name.toLowerCase() === sourceId.toLowerCase());
+                const biasBar = document.getElementById('bias-bar');
 
-            if (source) {
-                if (source.political_bias === 'left') {
-                    biasBar.innerHTML = '<div class="left">Gauche</div><div></div><div></div>';
-                } else if (source.political_bias === 'center') {
-                    biasBar.innerHTML = '<div></div><div class="center">Centre</div><div></div>';
-                } else if (source.political_bias === 'right') {
-                    biasBar.innerHTML = '<div></div><div></div><div class="right">Droite</div>';
+                if (source) {
+                    if (source.political_bias === 'left') {
+                        biasBar.innerHTML = '<div class="left">Gauche</div><div></div><div></div>';
+                    } else if (source.political_bias === 'center') {
+                        biasBar.innerHTML = '<div></div><div class="center">Centre</div><div></div>';
+                    } else if (source.political_bias === 'right') {
+                        biasBar.innerHTML = '<div></div><div></div><div class="right">Droite</div>';
+                    } else {
+                        biasBar.innerHTML = '<div class="unknown">Orientation inconnue</div>';
+                    }
                 } else {
-                    biasBar.innerHTML = '<div class="unknown">Orientation inconnue</div>';
+                    biasBar.innerHTML = '<div class="unknown">Source non répertoriée</div>';
                 }
             } else {
-                biasBar.innerHTML = '<div class="unknown">Source non répertoriée</div>';
+                throw new Error("Données MBFC non valides");
             }
+
         } catch (error) {
             console.error("Erreur lors de la récupération des données MBFC : ", error);
             document.getElementById('bias-bar').innerHTML = '<div class="unknown">Erreur lors de l\'analyse de la source</div>';
