--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Article Politique - France</title>
+    <title>Article Politique - Le Monde</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -64,8 +64,8 @@
 </div>
 
 <script>
-    // Clé API NewsData.io
-    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&q=france&country=fr&language=fr&category=politics";
+    // Clé API NewsData.io filtrée pour Le Monde
+    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&country=fr&language=fr&category=politics&q=lemonde";
 
     // Clé API Media Bias Fact Check
     const mbfcAPIUrl = "https://sheetdb.io/api/v1/p3dkx7064mky2";
