--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <script>
     // Clé API NewsData.io filtrée pour Le Monde
-    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&country=fr&language=fr&category=politics&q=lemonde";
+    const newsAPIUrl = "https://newsdata.io/api/1/news?apikey=pub_515353533f3d243a848d5ed6c74963418ece7&country=fr&language=fr&category=politics&domain=lemonde.fr";
 
     // Clé API Media Bias Fact Check
     const mbfcAPIUrl = "https://sheetdb.io/api/v1/p3dkx7064mky2";
